--- a/package.json
+++ b/package.json
@@ -6,10 +6,14 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "animate.css": "^4.1.1",
     "axios": "^0.21.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-loading-skeleton": "^2.2.0",
     "react-scripts": "4.0.3",
+    "react-scroll-effects": "^1.0.13",
+    "react-scroll-parallax": "^2.4.0",
     "styled-components": "^5.3.0",
     "web-vitals": "^1.0.1"
   },
